--- a/styles.css
+++ b/styles.css
@@ -268,9 +268,8 @@ h6 {
   width: 450px;
   height: 500px;
   text-align: center;
-
   float: right;
-  margin-top: 6rem;
+  margin-top: 4.5rem;
   margin-right: 1.34rem;
 }
 
@@ -327,6 +326,7 @@ h6 {
   background-color: var(--secondary-bg-color);
   color: var(--main-bg-color);
   padding: 4.5rem 0;
+  width: 100%;
 }
 
 #heading-comments {
@@ -340,7 +340,7 @@ h6 {
 
 #clients-comments {
   display: flex;
-  width: 1300px;
+  width: 1100px;
   justify-content: center;
   align-items: center;
   margin: 0.8rem auto;
